Add JWT Configuration

--- a/src/services/Identity.API/appsettings.Development.json
+++ b/src/services/Identity.API/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "Secret",
+    "ExpiryHours": 2,
+    "Issuer": "MySystem",
+    "Audience": "https://localhost"
   }
 }
